--- a/SpaceInvaders/Properties/Resources.resx
+++ b/SpaceInvaders/Properties/Resources.resx
@@ -124,10 +124,13 @@
   <data name="inavders" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\inavders.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="xS5AFPQ" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\xS5AFPQ.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="tank" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tank.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="xS5AFPQ" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\xS5AFPQ.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bullet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bullet1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
